Integrated full Customer module into Invoice workflow.